# networking-ccloud

./: .buildinfo  .coveragerc  .gitignore  .stestr.conf  README.md  genindex.html  index.html  intro.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree  intro.doctree
.doctrees/architecture/: driver.doctree  index.doctree  numerical-attributes.doctree  overview.doctree  switch-config.doctree
.doctrees/cli/: index.doctree
.doctrees/configuration/: config-driver.doctree  config-gen.doctree  config-input.doctree  config-oslo.doctree  index.doctree
.doctrees/contributor/: contributing.doctree  index.doctree
.doctrees/install/: get-started.doctree  index.doctree  install.doctree  next-steps.doctree  verify.doctree
.doctrees/reference/: index.doctree
.github/workflows/: build-docs.yml  run-tox.yml
_sources/: intro.rst.txt
_sources/architecture/: index.rst.txt  switch-config.rst.txt
_sources/cli/: index.rst.txt
_sources/configuration/: config-driver.rst.txt  config-input.rst.txt  index.rst.txt
_sources/install/: install.rst.txt
architecture/: driver.html  index.html  numerical-attributes.html  overview.html  switch-config.html
cli/: index.html
configuration/: config-driver.html  config-gen.html  config-input.html  config-oslo.html  index.html
contributor/: contributing.html  index.html
doc/source/: conf.py  index.rst
docs/design/: 01-address-scope.md  02-networks.md  03-ports-and-port-bindings.md  04-availbility-zones.md  10-management-networks.md  11-avocado.md  12-transit-leaf-aci.md  13-sharing-hosts-between-bbs.md  20-api-and-debug-tools.md  30-driver-config.md  device-config.dia  todo
docs/requirements/: Dockerfile  Makefile
examples/: cc-driver-config.yaml  networking-ccloud.ini
install/: get-started.html  index.html  install.html  next-steps.html  verify.html
networking_ccloud/: __init__.py
networking_ccloud/common/: config.py  constants.py  exceptions.py  helper.py
networking_ccloud/db/: db_plugin.py  (+1 more)
reference/: index.html
(+121 files in other folders)
