[metadata]
name = networking-ccloud
summary = OpenStack Neutron multivendor ml2 vxlan fabric driver
description-file =
    README.md
author = SAP SE Converged Cloud
author-email =
home-page = https://github.com/sapcc/networking-ccloud
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    networking_ccloud
