[metadata]
name = networking-ccloud
summary = OpenStack Neutron multivendor ml2 vxlan fabric driver
description_file =
    README.md
author = SAP SE Converged Cloud
author_email =
home_page = https://github.com/sapcc/networking-ccloud
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    networking_ccloud

[entry_points]
console_scripts =
    cc-netbox-config-gen = networking_ccloud.tools.netbox_config_gen:main
    cc-config-check = networking_ccloud.tools.config_check:main
neutron.ml2.mechanism_drivers =
    cc-fabric = networking_ccloud.ml2.mech_driver:CCFabricMechanismDriver
